src/styles/Navbar.css
/* Styles for mobile 0px to 768px */

.navbar-container {
  position: sticky;
  top: 0;
  padding: 22px 0;
  z-index: 3;
  background: var(--color-light);
}

.navbar {
  display: flex;
  align-items: center;
  position: relative;
  justify-content: center;
}

.navbar-toggler {
  position: absolute;
  left: 32px;
  bottom: 2px;
  height: 16px;
}

.navbar-toggler img {
  width: 20px;
  height: 16px;
  cursor: pointer;
}

.navbar-toggler.close img {
  width: 20px;
  height: 19px;
  cursor: pointer;
  transition: 0.4s ease;
}

.navbar-toggler span:last-child {
  margin-bottom: 0;
}

.navbar-mobile-menu {
  padding: 64px 32px 24px 32px;
  background: var(--color-primary);
  width: 256px;
  height: calc(100vh - 73px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: fixed;
  top: 73px;
  z-index: 2;
  transition: 0.4s ease;
}

.navbar-mobile-menu.closed {
  left: -256px;
}
.navbar-mobile-menu.open {
  left: 0px;
}

.navbar-mobile-menu-list {
  list-style-type: none;
}

.navbar-mobile-menu-list-item {
  margin-bottom: 24px;
}

.navbar-mobile-menu-list-item a {
  font-family: var(--font-primary);
  text-decoration: none;
  color: var(--color-light-text);
}

.navbar-mobile-menu-action-button {
  font-family: var(--font-primary);
  color: var(--color-light);
  font-size: 15px;
  line-height: 25px;
  padding: 14px 0;
  border-radius: 0;
  outline: unset;
  border: unset;
  background: var(--color-secondary);
  cursor: pointer;
  margin-bottom: 2rem;
}

.toggle-overlay {
  height: 0;
  background: unset;
  position: fixed;
  left: 0;
  transition: 0.4s ease;
  width: 0;
}

.toggle-overlay.open {
  background: rgba(0, 0, 0, 0.7);
  height: calc(100vh - 73px);
  width: 100vw;
  z-index: 1;
}

